--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Batch Uploader</title>
-    <!-- Load the Google API JavaScript client library -->
-    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- Заменяем старый скрипт на новый -->
+    <script src="https://accounts.google.com/gsi/client"></script>
   </head>
   <body>
     <div id="root"></div>
