Simplify Google API initialization and auth flow

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon03032025.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Batch Uploader</title>
-    <!-- Сначала загружаем базовый GAPI -->
-    <script src="https://apis.google.com/js/api.js"></script>
-    <!-- Затем загружаем Google Identity Services -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Загружаем GAPI с явным указанием версии -->
+    <script src="https://apis.google.com/js/api.js?v=2"></script>
+    <!-- Загружаем Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client"></script>
   </head>
   <body>
     <div id="root"></div>
