Fix Google API authentication issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon03032025.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Batch Uploader</title>
-    <!-- Загружаем только GAPI -->
+    <!-- Загружаем GAPI и OAuth -->
     <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
