--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/x-icon" href="/favicon03032025.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Batch Uploader</title>
-    <!-- Загружаем GAPI и OAuth -->
+    <!-- Загружаем GAPI -->
     <script src="https://apis.google.com/js/api.js"></script>
+    <!-- Добавляем мета-тег для CORS -->
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
   </head>
   <body>
     <div id="root"></div>
