--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>YouTube Batch Uploader</title>
     <!-- Загружаем GAPI -->
     <script src="https://apis.google.com/js/api.js"></script>
-    <!-- Добавляем мета-тег для CORS -->
-    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <!-- Загружаем Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client"></script>
+    <!-- Добавляем мета-теги для CORS -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
   </head>
   <body>
     <div id="root"></div>
