Add script loading checks and fix script loading order

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon03032025.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Batch Uploader</title>
-    <!-- Загружаем GAPI -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js" async defer></script>
+    <!-- Загружаем GAPI первым -->
+    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- Затем загружаем Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client"></script>
     <!-- Добавляем мета-теги для CORS -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
