--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="https://apis.google.com/js/api.js"></script>
     <!-- Затем загружаем Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client"></script>
+    <!-- Добавляем скрипт для явной загрузки GAPI клиента -->
+    <script>
+      function gapiLoaded() {
+        gapi.load('client', function() {
+          console.log('GAPI client loaded');
+        });
+      }
+    </script>
+    <script src="https://apis.google.com/js/api.js?onload=gapiLoaded"></script>
     <!-- Добавляем мета-теги для CORS -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
